# fast-api-project-template

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.http  commands.py  cspell.json  ok.text  pyproject.toml  scripts.py
.github/workflows/: ci.yml
src/: main.py
src/app/: app_builder.py  app_module.py
src/app/builders/: app_builder.py
src/app/enums/: app_endpoints_enum.py
src/app/routers/: app_router.py
src/common/constants/: __init__.py  status_messages_constant.py
src/common/env/: __init__.py  app_config.py  app_env_config.py  env_config.py  open_api_env_config.py
src/common/exception_handlers/: __init__.py  general_exception_handler.py  http_exception_handler.py  request_exception_handler.py
src/common/interceptors/: __init__.py  http_interceptor.py  http_logger_interceptor.py
src/common/loggers/: logger.py
src/common/loggers/enums/: ansi_colors_enum.py
src/common/middleware/: __init__.py  http_logger_middleware.py
src/common/models/: __init__.py  exception_trace_model.py  http_response_model.py
src/common/types/: __init__.py  data_type.py
src/common/utils/: __init__.py  extract_exception_details.py  get_status_message.py  get_timestamp.py
src/health/: health_module.py
src/health/constants/: all_constants.py  health_endpoint_constant.py  health_message_constant.py
src/health/controllers/: health_controller.py
src/health/models/: health_message_model.py
src/health/services/: health_service.py
test/e2e/src/health/: health_controller_test.py
