[tool.poetry]
name = "fast-api-project-template"
version = "0.1.0"
description = ""
authors = ["ocamilomontealegre <ocamilomontealegre@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
loguru = "^0.7.2"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
injector = "^0.22.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"

[tool.poetry.scripts]
start = "scripts:start"
lint = "scripts:lint"
format = "scripts:format"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
