[tool.poetry]
name = "fast-api-project-template"
version = "0.1.0"
description = ""
authors = ["ocamilomontealegre <ocamilomontealegre@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
loguru = "^0.7.2"
injector = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
httpx = "^0.27.2"
commitizen = "^3.30.1"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
check = true

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = "src"
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
include = ["python_coverage_demo/*.py"]
show_missing = true

[tool.poetry.scripts]
start = "scripts:start"
lint = "scripts:lint"
format = "scripts:format"
e2e_test = "scripts:test_e2e"
unit_test = "scripts:test_unit"
test = "scripts:test_all"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
